<resources>
    <string name="app_name">GymVision</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mulai pengalamanmu disini, karena permulaan yang baik membawa keberhasilan.</string>
    <string name="title_welcome_page">Welcome to the app</string>
    <string name="title_signup_page">REGISTER</string>
    <string name="not_valid_data">DATA YANG DIMASUKKAN TIDAK VALID</string>
    <string name="submit">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu data</string>
    <string name="title_login_page">LOGIN</string>
    <string name="name">Nama</string>
    <string name="logout">Keluar</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Analisis</string>
    <string name="home">Home</string>
    <string name="deskription">Tulis cerita kamu di sini</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="detail">Detail Story</string>
    <string name="add_story">Add Story</string>
    <string name="tittle">Judul</string>
    <string name="desc">Deskripsi</string>
    <string name="insert_name">Masukan nama</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analyze">Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="file_name">Selected Image: </string>
    <string name="nama_file"> </string>
    <string name="remove_image">Remove Image</string>
    <string name="please_select_an_image_from_gallery">Please select an image from gallery</string>
    <string name="value_result">[value result]</string>
    <string name="result">Hasil Analisis</string>
    <string name="nama_suplement">Suplement</string>
    <string name="desc_suplement">Desckripsi</string>
    <string name="product_image">Produk deskripsi</string>
    <string name="camera_x">CameraX</string>
    <string name="result_image">Hasil Gambar</string>
    <string name="recommended">Rekomendasi</string>
    <string name="register_prompt">Register</string>
    <string name="login_prompt">Login</string>
    <string name="back">Back</string>
    <string-array name="data_name">
        <item>Bench Press</item>
        <item>Treadmill</item>
        <item>Lat Pulldown</item>
        <item>Deadlift</item>
        <item>Squat</item>
    </string-array>
    <string-array name="video_urls">
            <item>VIDEO_URL_1</item>
            <item>VIDEO_URL_2</item>
            <item>VIDEO_URL_3</item>
            
    </string-array>
    <string-array name="data_description">
        <item>Sebagai pemula, lakukan langkah-langkah untuk gerakan dumbbell bench press secara bertahap. Bagi yang sudah berpengalaman, panduan ini mungkin bermanfaat untuk melakukan evaluasi terhadap gerakan latihan.\n\n

        1. Pertama-tama, Anda harus menguasai gerakan standar terlebih dulu. Ambil posisi berbaring pada bangku tinggi dan mendatar dengan kaki menekuk dan memijak lantai.\n
        2. Posisikan kedua tangan menyamping pada masing-masing sisi badan dan pegang tiang pengangkat bench press. Ketika melakukan posisi ini, siku Anda harus dibuat menekuk.\n
        3. Sebelum mengangkat beban, kami anjurkan Anda pemanasan terlebih dulu menggunakan tiangnya (berat tiang bench press sekitar 20 kg).Secara perlahan-lahan, angkatlah tiang dan posiskan persis di depan dada, setelah menahan beberapa detik kembalikan lagi tiang pada rak penyangga.\n
        4. Sudah cukup yakin ingin memulai gerakan bench press?  Mintalah instruktur yang menemani Anda menambahkan bebanPosisikan tangan pada tiang dengan telapak tangan menghadap depan. Kemudian angkat tiang ke atas melawan gravitasi dan turunkan sedikit demi sedikit dekat dengan dada.\n
        5. Lakukan latihan bench press sebanyak 8-12 kali tiap setnya dengan jumlah set maksimal enam. Ketika Anda merasa tubuh sudah kelelahan, berhentilah sejenak untuk istirahat lantas lanjutkan latihan kembali saat sudah siap.\n
        6. Waktu istirahat yang banyak direkomendasikan adalah 90-120 detik tiap set. Tapi mengingat setiap orang memiliki kemampuan yang berbeda-beda, Anda bisa mengambil istirahat lebih banyak lagi.\n
        </item>
        <item>Meski terlihat mudah, Anda harus tahu betul cara menggunakan treadmill untuk membantu memaksimalkan latihan. Nah, berikut panduannya.\n\n

        1. Pelajari tombol pada treadmill. Alat treadmill biasanya dilengkapi dengan berbagai macam tombol untuk mengatur kecepatan dan jarak tempuh. Anda bisa menekan tombol start untuk memulai dan stop untuk berhenti. Selain itu, mesin treadmill modern biasanya telah dilengkapi dengan fitur-fitur yang mendukung performa latihan, seperti indikator jantung dan jumlah kalori yang terbakar.\n
        2. Melakukan pemanasan Hal ini penting untuk membantu merilekskan otot dan sendi yang kaku serta menghindari risiko cedera.\n
        3. Berdiri dengan posisi tubuh yang lurus dan pandangan ke depan. Lepaskan genggaman tangan Anda dari pegangan treadmill lalu ayunkan tangan seirama dengan langkah kaki Anda.\n
        4. Mulai secara perlahan gunakan kecepatan yang paling rendah selama sekitar 5 – 10 menit untuk pemanasan. Setelah tubuh terbiasa, Anda boleh menambah kecepatannya secara perlahan.\n
        5. Lari di treadmill dengan durasi 10 menit
        </item>
        <item>Pull down lateral adalah latihan gabungan yang melatih seluruh rantai posterior. Ini adalah latihan yang bagus untuk membangun kekuatan, stabilitas, dan mobilitas di sekitar bahu dan punggung. Berikut Teknik melakukan dengan benar\n\n

        1. Tempatkan resistance band di bagian atas pintu dan pegang ujungnya di masing-masing tangan.\n
        2. Tarik ke bawah pada resistance band, tarik tulang belikat Anda ke belakang dan ke bawah dan siku ke arah samping. Kendalikan gerakan kembali ke posisi awal.\n
        3. Lakukan gerakan dengan 8 kali repetisi per set. Untuk merasakan otot yang berkontraksi di bagian punggung bagian atas\n
        </item>
        <item>Berikut adalah beberapa tahapan deadlift bagi Anda yang masih pemula:\n\n

         1. Bagi pemula, disarankan untuk memulai dari beban terkecil dulu, baru kemudian ditingkatkan jika tubuh sudah beradaptasi dengan keadaan.\n
         2. Aturlah posisi berdiri dengan tepat, yaitu tubuh lurus dan bagian kaki dibuka sampai selebar bahu.\n
         3. Menggenggam bagian barbel harus disesuaikan dengan postur tubuh, yaitu harus lebih lebar dari posisi bahu dan kaki. Genggamlah dengan tangan menghadap ke bawah, dan lengan lurus seutuhnya.\n
         4. Turunkan badan secara perlahan, dengan cara meluruskan paha seperti posisi akan duduk. Tahanlah keadaan itu, kemudian atur punggung tetap lurus dan pendangan menghadap kedepan. Posisi punggung harus rata dan perlahan melengkung, seiring dengan sudut pada dan lutut membentuk sudut siku-siku. Jika punggung Anda masih membungkuk, maka gerakan yang dilakukan masih belum tepat.\n
         5. Jika posisi sudah dirasa nyaman, maka mulailah angkat tubuh dengan perlahan, dengan memperhatikan posisi panggul dan punggung yang tetap lurus. Jaga keseimbangan badan dengan menahan barbel selama beberapa waktu. Pada tahapan ini, rasakan dengan saksama penambahan beban yang dirasakan oleh tiap otot yang ada di tubuh.\n
        </item>
        <item>Melakukan gerakan dengan benar bisa menurunkan risiko cedera atau nyeri pada bagian punggung bawah. Gerakan squat yang benar juga tidak membuat lutut terbebani dan menjadi sakit. Berikut cara melakukan squat yang benar.\n\n

        1. Mulai dengan berdiri tegak dan kaki dibuka selebar bahu\n
        2. Pertahankan posisi dada ke arah depan dan otot core dikunci\n
        3. Turunkan badan dengan mendorong bagian bokong ke arah bawah seperti akan duduk\n
        4. Tetap jaga mata dan dada untuk terus menghadap ke depan\n
        5. Cobalah untuk membuat paha sejajar dengan bokong atau bokong yang lebih rendah\n
        6. Saat tubuh sedang turun, tangan bisa berada di depan dada atau lurus ke depan untuk menjaga keseimbangan\n
        7. Angkat kembali tubuh kembali ke posisi semula\n
        8. Ulangi gerakan di atas.\n
        </item>
    </string-array>
    <string-array name="data_photo">
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Bench_press_1.jpg/1024px-Bench_press_1.jpg</item>
        <item>https://res.cloudinary.com/peloton-cycle/image/fetch/f_auto,c_limit,w_384,q_90/https://images.ctfassets.net/6ilvqec50fal/6Z1S0kptdAhsAdO9d9LFiW/9dc792e687b7d6115f95f9978f80f5b6/01_Tread__07364__1_.jpg</item>
        <item>https://www.jefit.com/wp/wp-content/uploads/2021/08/shoulder-pull-down-machine-fitness-man-working-out-lat-pulldown-training-gym-upper-body-strength-exercise-upper-back-1024x683.jpg</item>
        <item>https://www.evolvefitstudios.com/uploads/1/0/2/9/102951852/deadlifts_orig.jpeg</item>
        <item>https://cdn-0.weighttraining.guide/wp-content/uploads/2016/10/barbell-squat-resized-FIXED-2.png?ezimgfmt=ng%3Awebp%2Fngcb4</item>
    </string-array>
    <string-array name="product_names">
        <item>L-Men Gain Mass</item>
        <item>Optimum Nutrition Serious Mass</item>
        <item>Evolene Evomass</item>
        <item>ANS Creatine Monohydrate</item>
        <item>Muscle First Pro Gold Creatine</item>
        <item>Optimum Nutrition Creatine Powder</item>
        <item>Mutant Creakong </item>
        <item>XTEND BCAA</item>
        <item>RSP True Gain</item>
        <item>BPI Sports Best BCAA</item>
        
    </string-array>
</resources>