<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        android:visible="false" />

    <item
        android:id="@+id/blank1"
        android:title=""
        android:icon="@android:color/transparent"
        android:enabled="false"
        android:visible="true" />

    <item
        android:id="@+id/blank"
        android:title="@string/recommended"
        android:icon="@drawable/recommended"
        android:iconTint="@color/white"/>
</menu>
